--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "src"
   ],
   "scripts": {
-    "build": "tsc",
-    "clean": "rm -rf dist",
-    "fix": "npm run lint && npm run format",
-    "format": "prettier --write .",
-    "lint": "eslint \"src/**/*.ts\" --fix",
-    "start": "node dist/index.js",
-    "test": "jest --config .jestrc.json",
-    "test:coverage": "jest --config .jestrc.json --coverage",
-    "watch": "nodemon --config .nodemon.json src/index.ts"
-  },
+  "build": "tsc",
+  "start": "node dist/index.js",
+  "dev": "nodemon --config .nodemon.json src/index.ts",
+  "test": "jest --detectOpenHandles --forceExit",
+  "test:watch": "jest --watch",
+  "test:coverage": "jest --coverage"
+},
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/khannurien/i-want-typescript.git"
@@ -33,8 +31,10 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.6",
+    "@types/express": "^5.0.5",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.18.12",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^9.12.0",
@@ -44,9 +44,14 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
-    "ts-jest": "^29.2.5",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "<=5.6.0",
     "typescript-eslint": "^8.9.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "systeminformation": "^5.27.11"
   }
 }
