--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,43 +1,71 @@
-name: CD
+name: CD - Build & Publish Images
 
 on:
   push:
-    tags:
-      - "v*.*.*"   # par ex. v0.0.3
+    branches: [ main ]
+  workflow_dispatch: {}
+
+permissions:
+  contents: read
+  packages: write  # nécessaire pour pousser sur GHCR
+
+concurrency:
+  group: cd-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   IMAGE_NAME: sysinfo-api
+  DOCKERHUB_NAMESPACE: ldn1235  # <-- remplace par ton namespace Docker Hub
 
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Read version from package.json
+        id: pkg
+        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to DockerHub
+      # Login Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract tag
-        id: vars
-        run: echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_OUTPUT
+      # Login GHCR
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push (multi-arch)
-        uses: docker/build-push-action@v5
+      # Tags pour Docker Hub et GHCR
+      - name: Compute tags
+        id: tags
+        run: |
+          echo "TAGS_DH=${{ env.DOCKERHUB_NAMESPACE }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }},${{ env.DOCKERHUB_NAMESPACE }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_ENV
+          echo "TAGS_GH=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }},ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_ENV
+
+      # Build & push vers Docker Hub
+      - name: Build & Push to Docker Hub
+        uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.TAG }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: ${{ env.TAGS_DH }}
+
+      # Build & push vers GHCR
+      - name: Build & Push to GHCR
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ env.TAGS_GH }}
