--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,44 +2,35 @@ name: CD - Build & Publish Images
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch: {}
-
-permissions:
-  contents: read
-  packages: write  # nécessaire pour pousser sur GHCR
-
-concurrency:
-  group: cd-${{ github.ref }}
-  cancel-in-progress: true
-
-env:
-  IMAGE_NAME: sysinfo-api
-  DOCKERHUB_NAMESPACE: ldn1235  # <-- remplace par ton namespace Docker Hub
+    branches: [ "main" ]
+    tags:     [ "v*" ]
 
 jobs:
-  build-and-push:
+  build-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write        # pour GHCR
+      id-token: write        # (utile si tu signes plus tard)
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Read version from package.json
-        id: pkg
-        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
+      - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Login Docker Hub
+      # 1) Login Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Login GHCR
+      # 2) Login GHCR
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -47,25 +38,28 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Tags pour Docker Hub et GHCR
-      - name: Compute tags
-        id: tags
-        run: |
-          echo "TAGS_DH=${{ env.DOCKERHUB_NAMESPACE }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }},${{ env.DOCKERHUB_NAMESPACE }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_ENV
-          echo "TAGS_GH=ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }},ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_ENV
+      # 3) Métadonnées (tags/labels)
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/sysinfo-api
+            ghcr.io/${{ github.repository_owner }}/sysinfo-api
+          tags: |
+            # -> si push de tag 'vX.Y.Z', on fabrique 'X.Y.Z'
+            type=semver,pattern={{version}},value=${{ github.ref_name }}
+            # -> 'latest' uniquement sur main
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+            # -> tag de secours par SHA
+            type=sha
 
-      # Build & push vers Docker Hub
-      - name: Build & Push to Docker Hub
-        uses: docker/build-push-action@v6
+      # 4) Build & Push
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64
           push: true
-          tags: ${{ env.TAGS_DH }}
-
-      # Build & push vers GHCR
-      - name: Build & Push to GHCR
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ env.TAGS_GH }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
